--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal2016.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal2016.cshtml
@@ -15,6 +15,7 @@
 <script src="https://kendo.cdn.telerik.com/2016.1.406/js/kendo.all.min.js"></script>
 
 <script src="~/Scripts/progscript.js"></script>
+<script src="~/Scripts/portal2016.js"></script>
 </head>
 
 <body>
