sp redesign- campaign perf

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal2016.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal2016.cshtml
@@ -1,18 +1,19 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>@ViewBag.Title</title>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css' />
 <link href='~/Content/progstyle.css' rel="stylesheet" type="text/css" />
 
-<link href="https://kendo.cdn.telerik.com/2016.1.406/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
-<link href="https://kendo.cdn.telerik.com/2016.1.406/styles/kendo.bootstrap.min.css" rel="stylesheet" />
+<link href="https://kendo.cdn.telerik.com/2016.2.714/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
+<link href="https://kendo.cdn.telerik.com/2016.2.714/styles/kendo.bootstrap.min.css" rel="stylesheet" />
+<link href="https://kendo.cdn.telerik.com/2016.2.714/styles/kendo.default.mobile.min.css" rel="stylesheet" />
 
 <link href='~/Content/progstyle2.css' rel="stylesheet" type="text/css" />
 <link href='~/Content/portal2016.css' rel="stylesheet" type="text/css" />
 
-<script src="https://kendo.cdn.telerik.com/2016.1.406/js/jquery.min.js"></script>
-<script src="https://kendo.cdn.telerik.com/2016.1.406/js/kendo.all.min.js"></script>
+<script src="https://kendo.cdn.telerik.com/2016.2.714/js/jquery.min.js"></script>
+<script src="https://kendo.cdn.telerik.com/2016.2.714/js/kendo.all.min.js"></script>
 
 <script src="~/Scripts/progscript.js"></script>
 <script src="~/Scripts/portal2016.js"></script>
