--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle2.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle2.css
@@ -292,6 +292,8 @@
 .show{display:inline; width:50%; text-align:left; margin:10px 0 10px 0; clear:both;}
 .export{display:inline; float:right; width:50%; text-align:right; margin:10px 0 10px 0; clear:both;}
 
+.filter-export{text-align:left; margin:10px 0 10px 0;}
+
 
 /**Contact Page**/
 
