--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
@@ -8,7 +8,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 #header {
-	background: linear-gradient(90deg, #52AAE3 50%, #2d599d 50%);
+	background: linear-gradient(90deg, #52AAE3 400px, #2d599d 400px);
 	height: 100px;
 	border-top:none !important;
 	border-bottom: 1px solid #FFF;
