--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Users/AssignSearchProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Users/AssignSearchProfile.cshtml
@@ -15,7 +15,7 @@ Username: @Model.UserName
 @using (Ajax.BeginForm(ajaxOpts_Post))
 {
     <table><tr><td>
-    Advertiser: @Html.DropDownList("searchprofileid", siSelectList)
+    Search Profile: @Html.DropDownList("searchprofileid", siSelectList)
     </td></tr></table>
     <input type="submit" value="Assign" />
 }
