--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/TDads/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/TDads/Index.cshtml
@@ -12,7 +12,7 @@
         <th>Width</th>
         <th>Height</th>
     @if (showImages) {
-        <th></th>
+        <th>Images</th>
     }
         <th>URL</th>
     </tr>
